# mcpzip

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  go.mod
.github/workflows/: ci.yml  docs.yml
cmd/mcpzip/: main.go
docs/workflow-compressed-mcp-proxy/: compressed-mcp-proxy-original-prompt.md  compressed-mcp-proxy-state.md
docs/workflow-rewrite/: rewrite-original-prompt.md  rewrite-state.md
go-legacy/: go.mod
internal/auth/: oauth.go  oauth_disabled.go  oauth_test.go  store.go  store_test.go
internal/catalog/: cache.go  catalog.go  catalog_test.go
internal/cli/: cli_test.go  init.go  migrate.go  migrate_test.go  root.go  serve.go  status.go
internal/config/: config.go  config_test.go
internal/proxy/: e2e_test.go  handlers.go  handlers_test.go  instructions.go  instructions_test.go  integration_test.go  mcp_test.go  resources.go  resources_test.go  server.go
internal/search/: cache.go  cache_test.go  keyword.go  keyword_test.go  llm.go  search.go  search_test.go
internal/transport/: factory.go  factory_nooauth.go  factory_oauth.go  http.go  manager.go  manager_test.go  stdio.go  upstream.go
internal/types/: types.go  types_test.go
src/: config.rs  error.rs  lib.rs  main.rs  types.rs
src/auth/: mod.rs  oauth.rs  store.rs
src/catalog/: cache.rs  catalog.rs  mod.rs
src/cli/: init.rs  migrate.rs  mod.rs  serve.rs
src/mcp/: client.rs  mod.rs  protocol.rs  server.rs  transport.rs
src/proxy/: handlers.rs  instructions.rs  mod.rs  resources.rs  server.rs
website/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
(+105 files in other folders)
