[package]
name = "mcpzip"
version = "0.1.0"
edition = "2021"

[lib]
name = "mcpzip"
path = "src/lib.rs"

[[bin]]
name = "mcpzip"
path = "src/main.rs"

[dependencies]
# Async
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
reqwest-eventsource = "0.6"

# OAuth
oauth2 = "4"
axum = "0.7"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Crypto
sha2 = "0.10"
hex = "0.4"
rand = "0.9"
base64 = "0.22"

# URL handling
url = "2"
urlencoding = "2"

# File paths
dirs = "5"

# Browser open
open = "5"

# Error handling
thiserror = "2"

[dev-dependencies]
tempfile = "3"
